Dashboard/src/App.css
/* 
====================================
SCROLLBARS
==================================== 
*/

div::-webkit-scrollbar {
  width: 1em;
}

div::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 1px #95a5a6;
  box-shadow: inset 0 0 1px #95a5a6;
  background-color:#95a5a6;
}

div::-webkit-scrollbar-thumb {
background-color: #7f8c8d;
}

/* 
====================================
MAIN
==================================== 
*/

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html, body {
  height: 100%;
  font-size: 10px;
  line-height: 230%;
  background-color: #34495e;
  font-family: 'Lato', sans-serif;
  text-rendering: optimizeLegibility;
}

.app-content {
  display:flex;
  flex-direction: column;
  height: 100vh;
  justify-content: space-between;
}

.blank {
  height: 6em;
}

/* 
====================================
HEADER
==================================== 
*/

.title {
  display: flex;
  align-items: center;
}

header {
  background-color:#2c3e50;
  height: 5rem;
  font-size: 1.5rem;
  color: #ecf0f1;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding-left: 1em;
}

.logo {
  height: 2.5em;
  width: 2.5em;
  margin-right: 1rem;
}

.lamp-content {
  font-size: 1.8em;
  display: flex;
  align-items: center;
}

.bulb {
  height: 1.3em;
  width: 1.3em;
  margin: 0 0.6em;
}

/* 
====================================
BODY
==================================== 
*/

.main-content {
  display: flex;
  justify-content: center;
  align-items: center;
}

.container {
  display: flex;
  justify-content: center;
  align-items: center;
}

.panel-row {
  margin: 1rem auto 0 auto;
  display: flex;
  flex-wrap: wrap;
  align-content: space-between;
}

.panel-title {
  display: flex;
  justify-content: space-between;
  color: #ecf0f1;
  font-size: 1.6rem;
  background-color:#2c3e50;
  border-bottom: .1rem solid #7f8c8d;
}

.panel-title h3 {
  padding: 2rem;
}

.panel-body {
  background-color:#2c3e50;
  width: 60rem;
  height: 40rem;
  margin: 2rem 1rem 2rem 2rem;
  align-self: center;

}

.panel-body li {
  list-style-position: inside;
}

.panel-content {
  padding: 1.1em;
  height: 30rem;
  font-size: 1.5em;
  color: #ecf0f1;
  overflow: auto;
}

.long-panel {
  background-color: rgb(30, 40, 51);
  width: 155rem;
  height: 45rem;
  margin: 2rem;
}

.refresh-container {
  background-color: #c0392b;
  width: 6rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

.refresh {
  width: 2.5rem;
}

/* 
====================================
GITHUB CONTENT
==================================== 
*/

.github-entry{
  padding-bottom: 0.6em;
}

.github-name {
  margin-left: -0.4em;
  color: #e74c3c;
  font-weight: 700;
}

.github-repo {
  color: #3498db;
  font-weight: 700;
}

.github-icon {
  height: 1.5em;
  width: 1.5em;
  margin-right: 1em;
  margin-bottom: -0.2em;
}

.github-message {
  margin-left: 2em;
}

/* 
====================================
EOD CONTENT
==================================== 
*/

.slack-icon {
  height: 2em;
  width: 2em;
  margin-bottom: -0.5em;
  margin-right: 1em;
}

/* 
====================================
INFRASTRUCTURE CONTENT
==================================== 
*/

.ip-icon {
  height: 1.5em;
  width: 1.5em;
  margin-right: 1em;
  margin-bottom: -0.2em;
}

.ip-name {
  color: #3498db;
  font-weight: 700;
}

.ip-entry {
  padding-bottom: 0.2em;
}

.ip-up {
  color: #27ae60;
  font-weight: 700;
}

.ip-down {
  color: #e74c3c;
  font-weight: 700;
}

/* 
====================================
LAMP CONTENT
==================================== 
*/

.lamp-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100%;
}
.bulb-off {
  height: 10em;
  width: 10em;
}

.lamp-message {
  padding-top: 4rem;
  font-size: 2rem;
}

/* 
====================================
PRESENTATIONS CONTENT
==================================== 
*/

.presenter-section {
  width: 22em;
  font-size: .9em;
}

.presenter-row {
  display: flex;
  justify-content: space-between; 
}


/* 
====================================
DB1042 CONTENT
==================================== 
*/

.meeting {
  display: flex;
}

.meeting-time {
  justify-content: flex-start;
  width: 16rem;
  font-weight: bold;
  color: #1abc9c;
}

.meeting-topic {
  width: 35rem;
  justify-content: center;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #f1c40f;
}

.meeting-organizer {
  width: 20rem;
  justify-content: flex-end;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #e74c3c;
}

.meeting-icons {
  padding: 0 .6em 0 .4em;
  vertical-align: middle;
}

/*
======================================
RESPONSIVE DESIGN
======================================
*/

@media only screen and (max-width: 450px) {
  html {
    font-size: 6px;
  }
  
  header {
    padding: 2em;
  }
 
  .panel-body {
    width: 55rem;
  }

  .panel-content {
    font-size: 1.75rem;
  }

  .presenter-section {
    width: 5em;
    font-size: 1em;
  }

  .meeting-time {
    min-width: 16rem;
  }

  .blank {
    height: 0em;
  }

  .bulb {
    height: 1.5em;
    width: 1.5em;
    margin: 0 0.2em;
  }
}


/* 
====================================
LOADING SPINNER
==================================== 
*/

.spinner-container {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
}

.lds-spinner {
  color: official;
  display: inline-block;
  position: relative;
  width: 64px;
  height: 64px;
}
.lds-spinner div {
  transform-origin: 32px 32px;
  animation: lds-spinner 1.2s linear infinite;
}
.lds-spinner div:after {
  content: " ";
  display: block;
  position: absolute;
  top: 3px;
  left: 29px;
  width: 5px;
  height: 14px;
  border-radius: 20%;
  background: #fff;
}
.lds-spinner div:nth-child(1) {
  transform: rotate(0deg);
  animation-delay: -1.1s;
}
.lds-spinner div:nth-child(2) {
  transform: rotate(30deg);
  animation-delay: -1s;
}
.lds-spinner div:nth-child(3) {
  transform: rotate(60deg);
  animation-delay: -0.9s;
}
.lds-spinner div:nth-child(4) {
  transform: rotate(90deg);
  animation-delay: -0.8s;
}
.lds-spinner div:nth-child(5) {
  transform: rotate(120deg);
  animation-delay: -0.7s;
}
.lds-spinner div:nth-child(6) {
  transform: rotate(150deg);
  animation-delay: -0.6s;
}
.lds-spinner div:nth-child(7) {
  transform: rotate(180deg);
  animation-delay: -0.5s;
}
.lds-spinner div:nth-child(8) {
  transform: rotate(210deg);
  animation-delay: -0.4s;
}
.lds-spinner div:nth-child(9) {
  transform: rotate(240deg);
  animation-delay: -0.3s;
}
.lds-spinner div:nth-child(10) {
  transform: rotate(270deg);
  animation-delay: -0.2s;
}
.lds-spinner div:nth-child(11) {
  transform: rotate(300deg);
  animation-delay: -0.1s;
}
.lds-spinner div:nth-child(12) {
  transform: rotate(330deg);
  animation-delay: 0s;
}
@keyframes lds-spinner {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

